--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ariel González Carrasco
 description: Blog para curso sistemas recomendadores 2022
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://pbs.twimg.com/profile_images/455076407786237952/OfU941Sm.png
 
 #
 # Flags below are optional
